--- a/.vitepress/theme/styles/animation.scss
+++ b/.vitepress/theme/styles/animation.scss
@@ -1,17 +1,52 @@
+.animated {
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+}
+.fadeInUp {
+  animation-name: fadeInUp;
+}
+.fadeInLeft {
+  -webkit-animation-name: fadeInLeft;
+  animation-name: fadeInLeft
+}
+.fadeInRight {
+  animation-name: fadeInRight
+}
 @keyframes fadeInUp {
   0% {
     opacity: 0;
-    -webkit-transform: translate3d(0, 50%, 0);
-    -ms-transform: translate3d(0, 50%, 0);
     transform: translate3d(0, 50%, 0)
   }
   50% {
+    opacity: 1;
+    transform: none
+  }
+}
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(-100%, 0, 0);
+    -ms-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0)
+  }
+  100% {
     opacity: 1;
     -webkit-transform: none;
     -ms-transform: none;
     transform: none
   }
 }
-.fadeInUp {
-  animation: fadeInUp 1s;
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(100%, 0, 0);
+    -ms-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0)
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    -ms-transform: none;
+    transform: none
+  }
 }
