--- a/.vitepress/theme/styles/base.scss
+++ b/.vitepress/theme/styles/base.scss
@@ -1,10 +1,20 @@
 *,
 ::after,
 ::before {
+  box-sizing: border-box;
   border-style: solid;
+  border-color: #e9e9e9;
   border-width: 0;
+}
+.dark {
+  & *, ::after, ::before {
+    border-color: #363636;
+  }
 }
 
 html {
   font-size: 4px;
+}
+body {
+  overflow-x: hidden;
 }
